force-app/main/default/objects/Deal_Competitor__c/Deal_Competitor__c.object-meta.xml
<CustomObject>
    <label>Deal Competitor</label>
    <pluralLabel>Deal Competitors</pluralLabel>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>