force-app/main/default/objects/Deal_Competitor__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <label>Competitor Account</label>
    <type>Text</type>
    <length>200</length>
</CustomField>