force-app/main/default/objects/Deal_Competitor__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal__c</referenceTo>
    <relationshipName>Deal_Competitors</relationshipName>
    <relationshipLabel>Deal Competitors</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>