force-app/main/default/objects/Deal_Competitor__c/fields/Price_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Price_Comparison__c</fullName>
    <label>Price Comparison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>