force-app/main/default/objects/Deal_Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>