force-app/main/default/objects/Deal_Competitor__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>