force-app/main/default/objects/Deal_Competitor__c/fields/Win_Loss__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss__c</fullName>
    <label>Win/Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Tied</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>